test-cases/final-dump/detism_error.exp
Error detected during type checking of module(s) detism_error
[91mfinal-dump/detism_error.wybe:16:5: not_really_terminal has normal (total) determinism, but declared terminal
[0m[91mfinal-dump/detism_error.wybe:4:5: Calling test proc wybe.int.=<0> in a normal (total) context
[0m
