test-cases/final-dump/detism_error.wybe
# Test for various determinism errors

pub def not_really_det(x:int, y:int, ?z:int) {
    (x = y)
    ?z = x
}

# This doesn't work because fail isn't declared failure.  The compiler
# can't handle that yet because the mode checker isn't smart enough to
# understand that yet.
# pub def not_really_det2(?z:int) {
#     fail
#     ?z = 42
# }

pub def {terminal} not_really_terminal(x:int, ?y:int) {
    ?y = x
}
